--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,14 +4,32 @@ cmake_minimum_required(VERSION 3.15)
 # Generate compile_commands.json
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-# Create C Project
-project(ProjectM LANGUAGES C)
+# Make our cmake scripts available
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
 
-option(BUILD_EXAMPLES "Enable ${PROJECT_NAME} project example targets" OFF)
+# Create C Project
+project(ProjectM LANGUAGES C CXX)
+
+# Code Coverage
+include(CodeCoverage)
+set(GCOVR_ADDITIONAL_ARGS "-s" "--keep")
+append_coverage_compiler_flags()
+setup_target_for_coverage_gcovr_html(
+    NAME coverage
+    EXECUTABLE test
+    DEPENDENCIES MyMathLibrary
+    BASE_DIRECTORY "${CMAKE_SOURCE_DIR}"
+    EXCLUDE "build" "examples" "external" "tests")
+
+# External Submodules
+add_subdirectory(external)
 
 # Source Directory
 add_subdirectory(src)
 
-if(BUILD_EXAMPLES)
-    add_subdirectory(examples)
-endif()
+# Examples
+add_subdirectory(examples)
+
+# Tests
+enable_testing()
+add_subdirectory(tests)
